Fix spacing around source block

--- a/css/scss/components/_post.scss
+++ b/css/scss/components/_post.scss
@@ -93,7 +93,8 @@
 }
 
 .post-body_src {
-  background: rgba($color-base, 0.4);
+  background: lighten($color-base, 40);;
+  margin: $typecsset-base-line-height 0;
   padding: 0.5em;
   p {
     margin: 0;
